Refactored the code. Created a base desktop interface.

--- a/src/LazyCreator.Cli/LazyCreator.Cli.csproj
+++ b/src/LazyCreator.Cli/LazyCreator.Cli.csproj
@@ -7,7 +7,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\LazyCreator.Commands\LazyCreator.Commands.csproj" />
-      <ProjectReference Include="..\LazyCreator.Engine\LazyCreator.Engine.csproj" />
+      <ProjectReference Include="..\LazyCreator.Engine\LazyCreator.Engines.csproj" />
       <ProjectReference Include="..\LazyCreator.Interpreters\LazyCreator.Interpreters.csproj" />
     </ItemGroup>
 
